Updated link to JIRA

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="boxHeader">
             <div class="textosHeader">
                 <h1><b>Localization Request</b></h1>
-                <p>If you have a JIRA account, click here. In case you don't have one, use the button below to make your localization request.</p>
+                <p>If you have a JIRA account, <a href="https://vtex-dev.atlassian.net/jira/core/projects/I18N/form/4"><strong>click here</strong></a>. In case you are not in JIRA, use the button below to create your localization request.</p>
 
                 <a class="botonGetStarted" id="feedback-button" href="#" rel="nofollow noopener">Get Request</a>
 
