Correct button form

--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Oscar Cornejo">
-    <meta name="description" content="Landing Page">
+    <meta name="author" content="Oscar Cornejo and Sheila Gomes">
+    <meta name="description" content="Localization Request">
     <title>Landing Page</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="icons/icomoon.css">
     <link rel="stylesheet" href="css/estilos.css">
 	
-	<script type="text/javascript" src="https://diana-cartagena.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-lgwqy6/b/3/9edb822e6c4db3635f27806476c088cb/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=pt-BR&collectorId=a8b4a529"></script><script type="text/javascript" src="?collectorId=a8b4a529"></script>
+    <script type="text/javascript" src="https://vtex-dev.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-lgwqy6/b/3/9edb822e6c4db3635f27806476c088cb/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=pt-BR&collectorId=5899aedb"></script><script type="text/javascript" src="?collectorId=5899aedb"></script>
 
-	<script type="text/javascript">
-		window.ATL_JQ_PAGE_PROPS =  {
-			"triggerFunction": function(showCollectorDialog) {
-				jQuery("#feedback-button").click(function(e) {
-					e.preventDefault();
-					showCollectorDialog();
-				});
-			}
-		};
-	</script>
+    <script type="text/javascript">
+        window.ATL_JQ_PAGE_PROPS =  {
+            "triggerFunction": function(showCollectorDialog) {
+                //Requries that jQuery is available! 
+                jQuery("#feedback-button").click(function(e) {
+                    e.preventDefault();
+                    showCollectorDialog();
+                });
+            }
+        };
+    </script>
+
 
 </head>
 
