Added new button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         <div class="boxHeader">
             <div class="textosHeader">
                 <h1><b>Localization Request</b></h1>
-                <p>If you have a JIRA account, <a href="https://vtex-dev.atlassian.net/jira/core/projects/I18N/form/4"><strong>click here</strong></a>. In case you are not in JIRA, use the button below to create your localization request.</p>
-
-                <a class="botonGetStarted" id="feedback-button" href="#" rel="nofollow noopener">Get Request</a>
+                <p>Please select one of the options below to create your request:</p>
+                
+                <a class="botonGetStarted" id="feedback-button" href="#" rel="nofollow noopener">non-Jira user </a>
+                <a class="botonGetStarted" href="https://vtex-dev.atlassian.net/jira/core/projects/I18N/form/4" rel="nofollow noopener">Jira user</a>
 
             </div>
 
