Added new sentence and link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 
                 <a class="botonGetStarted" href="https://vtex-dev.atlassian.net/jira/core/projects/I18N/form/4" rel="nofollow noopener">Jira user</a>
                 <a class="botonGetStarted" id="feedback-button" href="#" rel="nofollow noopener">non-Jira user </a>
-
+                
+                <p class="m-20px">If you have questions on how to fill out the form or how our deadline works, <a href="https://www.notion.so/vtexhandbook/Request-submission-266eb45d794f4ef9acde4c939e9df22d">click here</a>.</p>
             </div>
 
             <div class="imgHeader">
